fixed styling on mobile view

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -6,7 +6,7 @@
   z-index: -1;
 }
 
-@media all and (max-width: 800px) {
+@media all and (max-width: 900px) {
   #bg {
     height: 100%;
   }
@@ -16,12 +16,12 @@
   }
 
   .pakej-detail .col-xs-12 {
-    width: 50%;
+    width: 25%;
     margin-bottom: 10px;
   }
 
   .pakej-detail h3 {
-    font-size: 20px;
+    font-size: 28px;
   }
 
   .pakej-2 > tbody > tr > td span {
